# education

./: .gitignore
.github/workflows/: README.md  reusable-test-day-poetry.yml  reusable-test-day.yml  test-day_10.yml  test-day_11.yml  test-day_12.yml  (+9 more)
goAlgo/: go.mod
javaAlgo/: pom.xml
javaLeetcode/: pom.xml
kotlinAlgo/: pom.xml
learnPython/: README.md  requirements.txt
learnPython/day_13/: README.md  alembic.ini  pyproject.toml
learnPython/day_13/alembic/: env.py
learnPython/day_13/alembic/versions/: 2d3110efef69_create_tasks_table.py  71977b3c4f0f_add_priority_to_tasks_table.py
learnPython/day_13/src/day_13/: __init__.py  db.py  main.py  models.py  repositories.py  services.py
learnPython/day_13/tests/: conftest.py  test_migrations.py  test_models.py  test_repository.py  test_service.py
learnPython/day_15/: Makefile  README.md  alembic.ini  dc.local.env.yml  pyproject.toml
learnPython/day_15/alembic/: env.py
learnPython/day_15/alembic/versions/: 162db1d9e370_create_task_table.py
learnPython/day_15/app/: main.py
learnPython/day_15/app/api/routes/: health.py  tasks.py
learnPython/day_15/app/core/: config.py  exceptions.py  handlers.py
learnPython/day_15/app/db/: models.py  session.py
learnPython/day_15/app/db/repositories/: task_repository.py
learnPython/day_15/app/dependecies/: dependencies.py
learnPython/day_15/app/schemas/: tasks.py
learnPython/day_15/app/services/: task_service.py
learnPython/day_15/tests/: conftest.py  test_create_task.py  test_health.py
prep_1/: pom.xml
task_1/: pom.xml
task_2/: README.md  pom.xml
(+336 files in other folders)
