[tool.poetry]
name = "day-13"
version = "0.1.0"
description = ""
authors = ["vdsimako <v.simakov@gmail.com>"]
readme = "README.md"
packages = [{include = "day_13", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.48"}
alembic = "^1.18.4"
aiosqlite = "^0.22.1"
mypy = "^1.19.1"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
