[project]
name = "day-15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "greenlet>=3.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.18.4",
]

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.22.1",
]
